fixing spacing on the searchbar

--- a/src/index.css
+++ b/src/index.css
@@ -104,7 +104,7 @@ body{
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    gap: 30px;
+    gap: 10px;
 }
 
 .marketplacemiddlerow {
